--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,7 @@
 {
     "recommendations": [
-        "dakshmiglani.hex-to-rgba"
+        "adamprzybylski.paradox-syntax",
+        "chaofan.hoi4modutilities",
+        "tboby.cwtools-vscode"
     ]
 }
