イベント追加

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "adamprzybylski.paradox-syntax",
         "chaofan.hoi4modutilities",
-        "tboby.cwtools-vscode"
+        "tboby.cwtools-vscode",
+        "sth4nothing.paradox-formatter"
     ]
 }
