推奨事項の微変更

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,7 @@
     "recommendations": [
         "adamprzybylski.paradox-syntax",
         "chaofan.hoi4modutilities",
+        "sth4nothing.paradox-formatter",
         "tboby.cwtools-vscode",
-        "sth4nothing.paradox-formatter"
     ]
 }
